--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,7 +24,10 @@
       "dom",
       "dom.iterable",
       "scripthost"
-    ]
+    ],
+
+    // Custom
+    "resolveJsonModule": true
   },
   "include": [
     "src/**/*.ts",
