--- a/src/content/charlie-config.json
+++ b/src/content/charlie-config.json
@@ -8,5 +8,43 @@
         "dim": 60,
         "text_color": "white",
         "font": "'Neucha', cursive"
-    }
+    },
+    "artworks":
+    [
+        {
+            "date": "2019-10-05",
+            "title": "Vibrance",
+            "format": "jpg"
+        },
+        {
+            "date": "2019-10-17",
+            "title": "Entrance",
+            "format": "jpg"
+        },
+        {
+            "date": "2019-10-23",
+            "title": "Flowey",
+            "format": "jpg"
+        },
+        {
+            "date": "2019-10-30",
+            "title": "Serial Dilution",
+            "format": "jpg"
+        },
+        {
+            "date": "2019-11-10",
+            "title": "View",
+            "format": "jpg"
+        },
+        {
+            "date": "2019-11-21",
+            "title": "Frozen",
+            "format": "jpg"
+        },
+        {
+            "date": "2019-12-20",
+            "title": "SnowQUIRREL",
+            "format": "jpg"
+        }
+    ]
 }
