[+] Create default title

--- a/src/content/charlie-config.json
+++ b/src/content/charlie-config.json
@@ -9,6 +9,10 @@
         "text_color": "white",
         "font": "'Neucha', cursive"
     },
+    "artwork":
+    {
+        "default_title": "Untitled"
+    },
     "artworks":
     [
         {
