--- a/package.json
+++ b/package.json
@@ -8,12 +8,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@types/photoswipe": "^4.0.29",
     "core-js": "^3.4.3",
     "element-ui": "^2.13.0",
+    "p-wait-for": "^3.1.0",
     "photoswipe": "^4.1.3",
     "vue": "^2.6.10",
     "vue-class-component": "^7.0.2",
-    "vue-picture-swipe": "^1.2.0",
     "vue-property-decorator": "^8.3.0"
   },
   "devDependencies": {
