[+] Add author config field

--- a/src/content/charlie-config.json
+++ b/src/content/charlie-config.json
@@ -18,7 +18,8 @@
     "artwork":
     {
         "default_title": "Untitled",
-        "default_format": "jpg"
+        "default_format": "jpg",
+        "author": "Charlie"
     },
     "artworks":
     [
