--- a/src/content/config.json
+++ b/src/content/config.json
@@ -15,43 +15,25 @@
         "height": 10,
         "background": "lightgray"
     },
-    "artwork":
+    "post":
     {
         "default_title": "Untitled",
         "default_format": "jpg",
         "author": "Hykilpikonna"
     },
-    "artworks":
+    "types":
     [
         {
-            "date": "2019-10-05",
-            "title": "Vibrance",
-            "format": "png"
+            "type": "Drawing and Painting",
+            "posts": "@/content/drawing-painting.json"
         },
         {
-            "date": "2019-10-17",
-            "title": "Entrance"
+            "type": "Photography",
+            "posts": "@/content/photography.json"
         },
         {
-            "date": "2019-10-23",
-            "title": "Flowey"
-        },
-        {
-            "date": "2019-10-30",
-            "title": "Serial Dilution"
-        },
-        {
-            "date": "2019-11-10",
-            "title": "View",
-            "description": "This is an example description"
-        },
-        {
-            "date": "2019-11-21",
-            "title": "Frozen"
-        },
-        {
-            "date": "2019-12-20",
-            "title": "Snow Quirrel"
+            "type": "Video",
+            "posts": "@/content/video.json"
         }
     ]
 }
