--- a/src/content/config.json
+++ b/src/content/config.json
@@ -25,15 +25,56 @@
     [
         {
             "type": "Drawing and Painting",
-            "posts": "@/content/drawing-painting.json"
+            "posts":
+            [
+                {
+                    "date": "2019-10-05",
+                    "title": "Vibrance",
+                    "format": "png"
+                },
+                {
+                    "date": "2019-10-17",
+                    "title": "Entrance"
+                },
+                {
+                    "date": "2019-10-23",
+                    "title": "Flowey"
+                },
+                {
+                    "date": "2019-10-30",
+                    "title": "Serial Dilution"
+                },
+                {
+                    "date": "2019-11-10",
+                    "title": "View",
+                    "description": "This is an example description"
+                },
+                {
+                    "date": "2019-11-21",
+                    "title": "Frozen"
+                },
+                {
+                    "date": "2019-12-20",
+                    "title": "Snow Quirrel",
+                    "file": "2019-12-20-squirrel/public.jpg",
+                    "thumbnail": "2019-12-20-squirrel/thumb.jpg"
+                }
+            ]
         },
         {
             "type": "Photography",
-            "posts": "@/content/photography.json"
+            "posts":
+            [
+
+            ]
         },
         {
             "type": "Video",
-            "posts": "@/content/video.json"
+            "video": true,
+            "posts":
+            [
+
+            ]
         }
     ]
 }
