--- a/src/content/config.json
+++ b/src/content/config.json
@@ -24,7 +24,7 @@
     "types":
     [
         {
-            "type": "Drawing and Painting",
+            "type": "Painting",
             "posts":
             [
 
