[+] Add default type config field

--- a/src/content/config.json
+++ b/src/content/config.json
@@ -19,7 +19,8 @@
     {
         "default_title": "Untitled",
         "default_format": "jpg",
-        "author": "Hykilpikonna"
+        "author": "Hykilpikonna",
+        "default_type": "Photography"
     },
     "types":
     [
