--- a/src/content/config.json
+++ b/src/content/config.json
@@ -1,7 +1,7 @@
 {
     "title":
     {
-        "text": "Hykilpikonna's Gallery",
+        "text": "Charlie's Gallery",
         "sub": "This is a subtitle",
         "height": 80,
         "background": "title.jpg",
