--- a/src/content/config.json
+++ b/src/content/config.json
@@ -25,7 +25,8 @@
     "types":
     [
         {
-            "type": "Painting",
+            "type": "Drawing & Painting",
+            "folder": "painting",
             "posts":
             [
                 {
