--- a/src/content/config.json
+++ b/src/content/config.json
@@ -45,7 +45,6 @@
                     "title":"Old time",
                     "format":"jpg"
                 },
-
                 {
                     "date":"2017-11-23",
                     "title":"The ladder to the sky",
@@ -59,6 +58,60 @@
                 {
                     "date":"2017-08-08",
                     "title":"The quietness before dawn"
+                },
+                {
+                    "date":"2018-09-04",
+                    "title":"All an illusion",
+                    "format":"jpg"
+                },
+                {
+                    "date":"2017-11-24",
+                    "title":"Story in glass",
+                    "format":"jpg"
+                },
+                {
+                    "date":"2017-06-11",
+                    "title":"Circle movement",
+                    "format":"jpg"
+                },
+                {
+                    "date":"2016-06-29",
+                    "title":"Livelihood",
+                    "format":"jpg"
+                },
+                {
+                    "date":"2018-06-10",
+                    "title":"Time tunnel",
+                    "format":"jpg"
+                },
+                {
+                   "date":"2018-09-03",
+                   "title":"Mirror of the sky",
+                   "format":"jpg"
+                },
+                {
+                    "date":"2016-12-23",
+                    "title":"From heaven",
+                    "format":"jpg"
+                },
+                {
+                    "date":"2017-02-21",
+                    "title":"Sunset",
+                    "format":"jpg"
+                },
+                {
+                    "date":"2017-02-20",
+                    "title":"Sunset",
+                    "format":"jpg"
+                },
+                {
+                    "date":"2016-04-18",
+                    "title":"Light of the city",
+                    "format":"jpg"
+                },
+                {
+                    "date":"2018-09-01",
+                    "title":"Yellowknife Canada"
                 },
                 {
                     "date":"2016-06-28",
