--- a/src/content/config.json
+++ b/src/content/config.json
@@ -114,6 +114,35 @@
                     "title":"Yellowknife Canada"
                 },
                 {
+                    "date":"2014-11-07",
+                    "title":"The runner",
+                    "format":"jpg"
+                },
+                {
+                    "date":"2015-08-08",
+                    "title":"Summer time"
+                },
+                {
+                    "date":"2015-08-09",
+                    "title":"Balance"
+                },
+                {
+                    "date":"2016-07-06",
+                    "title":"The gymnsat"
+                },
+                {
+                    "date":"2016-06-05",
+                    "title":"The meaning of existence"
+                },
+                {
+                    "date":"2018-07-14",
+                    "title":"Language of water"
+                },
+                {
+                    "date":"2018-09-01",
+                    "title":"Parking"
+                },
+                {
                     "date":"2016-06-28",
                     "title":"The eye of the night",
                     "format":"jpg"
