--- a/src/content/config.json
+++ b/src/content/config.json
@@ -20,7 +20,7 @@
         "default_title": "Untitled",
         "default_format": "jpg",
         "author": "Charlie",
-        "default_type": "Drawing and Painting"
+        "default_type": "Photography"
     },
     "types":
     [
