--- a/src/content/config.json
+++ b/src/content/config.json
@@ -31,71 +31,86 @@
             [
                 {
                     "date": "2017-12-31",
-                    "title": "Time stands still Life moves on"
+                    "title": "Time stands still Life moves on",
+                    "description": "Oil painting",
+                    "description":"Harold Parker State Forest"
                 },
                 {
                     "date": "2017-12-31",
-                    "title": "Family"
+                    "title": "Family",
+                    "description":"Charcoal",
+                    "description":"Harold Parker State Forest"
                 },
                 {
                     "date": "2018-12-30",
-                    "title": "The first beam of light"
+                    "title": "The first beam of light",
+                    "description": "Oil painting",
+                    "description":"Harold Parker State Forest"
                 },
                 {
                     "date": "2017-12-31",
-                    "title": "Children of the forest"
+                    "title": "Children of the forest",
+                    "description": "Colored pencils"
                 },
                 {
                     "date": "2017-12-31",
-                    "title": "Waiting"
+                    "title": "Waiting",
+                    "description": "Ink,Colored pencils"
                 },
                 {
                     "date": "2016-12-31",
-                    "title": "Flowing space"
+                    "title": "Flowing space",
+                    "description": "Ink,Colored pencils"
                 },
                 {
                     "date": "2017-12-31",
-                    "title": "Successful landing"
+                    "title": "Successful landing",
+                    "description": "Colored pencils"
                 },
                 {
                     "date": "2016-12-31",
-                    "title": "Light and heavy"
+                    "title": "Light and heavy",
+                    "description": "Colored pencils"
                 },
                 {
                     "date": "2018-12-31",
-                    "title": "Valor and romance"
+                    "title": "Valor and romance",
+                    "description": "Colored pencils"
                 },
                 {
                     "date": "2018-12-31",
-                    "title": "Harrowing"
+                    "title": "The visitor",
+                    "description": "Colored pencils"
                 },
                 {
                     "date": "2018-12-31",
-                    "title": "The visitor"
+                    "title": "Who is he",
+                    "description": "Oil painting"
+                },
+                {
+                    "date": "2017-12-31",
+                    "title": "Still with us",
+                    "description": "Colored pencils"
                 },
                 {
                     "date": "2018-12-31",
-                    "title": "Who"
-                },
-                {
-                    "date": "2018-12-31",
-                    "title": "Grandpa"
+                    "title": "Grandpa",
+                    "description": "Ink Colored pencils"
                 },
                 {
                     "date": "2016-12-31",
-                    "title": "Peacefull daybreak is here"
+                    "title": "Peacefull daybreak is here",
+                    "description": "Colored pencils"
                 },
                 {
                     "date": "2017-12-31",
-                    "title": "Still with us"
+                    "title": "Between reality and illusion",
+                    "description": "Colored pencils"
                 },
                 {
                     "date": "2017-12-31",
-                    "title": "Between reality and illusion"
-                },
-                {
-                    "date": "2017-12-31",
-                    "title": "Old light New life"
+                    "title": "Old light New life",
+                    "description": "Colored pencils"
                 },
                 {
                     "date": "2018-12-31",
@@ -110,17 +125,21 @@
                 {
                     "date":"2016-06-28",
                     "title":"Old time",
-                    "format":"jpg"
+                    "format":"jpg",
+                    "description":"Huizhou,Anhui Province,China"
                 },
                 {
                     "date":"2017-11-23",
                     "title":"The ladder to the sky",
-                    "format":"jpg"
+                    "format":"jpg",
+                    "description":"New York"
+
                 },
                 {
                     "date":"2018-09-03",
                     "title":"From afar",
-                    "format":"jpg"
+                    "format":"jpg",
+                    "description":"Yellowknife,Canada"
                 },
                 {
                     "date":"2017-08-08",
@@ -144,12 +163,15 @@
                 {
                     "date":"2016-06-29",
                     "title":"Livelihood",
-                    "format":"jpg"
+                    "format":"jpg",
+                    "description":"Huizhou,Anhui Province,China"
+
                 },
                 {
                     "date":"2018-06-10",
                     "title":"Time tunnel",
-                    "format":"jpg"
+                    "format":"jpg",
+                    "description":"Cape Cod,MA"
                 },
                 {
                    "date":"2018-09-03",
@@ -159,22 +181,26 @@
                 {
                     "date":"2016-12-23",
                     "title":"From heaven",
-                    "format":"jpg"
+                    "format":"jpg",
+                    "description":"Huangshan,China"
                 },
                 {
                     "date":"2017-02-21",
                     "title":"Sunset",
-                    "format":"jpg"
+                    "format":"jpg",
+                    "description":"Keywest,FL"
                 },
                 {
                     "date":"2017-02-20",
                     "title":"Sunset",
-                    "format":"jpg"
+                    "format":"jpg",
+                    "description":"Keywest,FL"
                 },
                 {
                     "date":"2016-04-18",
                     "title":"Light of the city",
-                    "format":"jpg"
+                    "format":"jpg",
+                    "description":"New York"
                 },
                 {
                     "date":"2018-09-01",
@@ -183,36 +209,39 @@
                 {
                     "date":"2014-11-07",
                     "title":"The runner",
-                    "format":"jpg"
+                    "format":"jpg",
+                    "description":"Jiuzaigou,Sichuan Province,China"
                 },
                 {
                     "date":"2015-08-08",
-                    "title":"Summer time"
+                    "title":"Summer time",
+                    "description":"Japan"
                 },
                 {
                     "date":"2015-08-09",
-                    "title":"Balance"
-                },
-                {
-                    "date":"2016-07-06",
-                    "title":"The gymnsat"
+                    "title":"Balance",
+                    "description":"Japan"
                 },
                 {
                     "date":"2016-06-05",
-                    "title":"The meaning of existence"
+                    "title":"The meaning of existence",
+                    "description":"Salem,MA"
                 },
                 {
                     "date":"2018-07-14",
-                    "title":"Language of water"
+                    "title":"Language of water",
+                    "description":"Yunnan Province,China"
                 },
                 {
                     "date":"2018-09-01",
-                    "title":"Parking"
+                    "title":"Parking",
+                    "description":"Yellowknife,Canada"
                 },
                 {
                     "date":"2016-06-28",
                     "title":"The eye of the night",
-                    "format":"jpg"
+                    "format":"jpg",
+                    "description":"Hongcun,Anhui Province,China"
                 }
             ]
         },
