--- a/src/content/config.json
+++ b/src/content/config.json
@@ -32,20 +32,17 @@
                 {
                     "date": "2017-12-31",
                     "title": "Time stands still Life moves on",
-                    "description": "Oil painting",
-                    "description":"Harold Parker State Forest"
+                    "description":"Oil painting,Harold Parker State Forest"
                 },
                 {
                     "date": "2017-12-31",
                     "title": "Family",
-                    "description":"Charcoal",
-                    "description":"Harold Parker State Forest"
+                    "description":"Charcoal,Harold Parker State Forest"
                 },
                 {
                     "date": "2018-12-30",
                     "title": "The first beam of light",
-                    "description": "Oil painting",
-                    "description":"Harold Parker State Forest"
+                    "description":"Oil painting,Harold Parker State Forest"
                 },
                 {
                     "date": "2017-12-31",
