--- a/src/content/config.json
+++ b/src/content/config.json
@@ -69,6 +69,15 @@
                     "title": "Prophecy",
                     "description": "colored pencils"
                 },
+                {   "date": "2018-04-06",
+                    "title": "Society versus free will",
+                    "description": "Ink,Colored Pencils"
+                },
+                {
+                    "date": "2018-04-08",
+                    "title": "Society versus free will",
+                    "description": "Ink, Colored Pencils"
+                },
                 {
                     "date": "2017-12-31",
                     "title": "Waiting",
@@ -78,6 +87,10 @@
                     "date": "2016-12-31",
                     "title": "Flowing space",
                     "description": "Ink,Colored pencils"
+                },
+                {   "date": "2017-12-31",
+                    "title": "Between reality and illusion",
+                    "description": "Ink, Colored pencils"
                 },
                 {
                     "date": "2017-12-31",
@@ -91,7 +104,17 @@
                 },
                 {
                     "date": "2018-12-31",
+                    "title": "Grandpa 's old stuff",
+                    "description": "Ink Colored pencils"
+                },
+                {
+                    "date": "2018-12-31",
                     "title": "Valor and romance",
+                    "description": "Colored pencils"
+                },
+                {
+                    "date": "2019-12-20",
+                    "title": "Power of will",
                     "description": "Colored pencils"
                 },
                 {
@@ -110,18 +133,8 @@
                     "description": "Colored pencils"
                 },
                 {
-                    "date": "2018-12-31",
-                    "title": "Grandpa",
-                    "description": "Ink Colored pencils"
-                },
-                {
                     "date": "2016-12-31",
                     "title": "Peacefull daybreak is here",
-                    "description": "Colored pencils"
-                },
-                {
-                    "date": "2017-12-31",
-                    "title": "Between reality and illusion",
                     "description": "Colored pencils"
                 },
                 {
@@ -158,14 +171,42 @@
                     "format":"jpg",
                     "description":"Yellowknife,Canada"
                 },
+                {   "date": "2019-04-14",
+                    "title": "Gaze into darkness",
+                    "format": "jpg"
+                },
                 {
                     "date":"2017-08-08",
                     "title":"The quietness before dawn"
+                },
+                {   "date": "2019-04-17",
+                    "title": "A cup of joy",
+                    "format": "jpg"
+                },
+                {   "date": "2019-04-16",
+                    "title": "Night fantasy-red",
+                    "format": "jpg"
+                },
+                {   "date": "2019-03-17",
+                    "title": "A bean of light through the shades",
+                    "format": "jpg"
+                },
+                {   "date": "2019-04-07",
+                    "title": "A long weekend sleep",
+                    "format": "jpg"
                 },
                 {
                     "date":"2018-09-04",
                     "title":"All an illusion",
                     "format":"jpg"
+                },
+                {   "date": "2018-09-02",
+                    "title": "To knowhere",
+                    "format": "jpg"
+                },
+                {   "date": "2018-12-25",
+                    "title": "Pathway to temptation",
+                    "format": "jpg"
                 },
                 {
                     "date":"2017-11-24",
@@ -177,12 +218,14 @@
                     "title":"Circle movement",
                     "format":"jpg"
                 },
-                {
-                    "date":"2016-06-29",
+                {   "date":"2019-04-16",
+                    "title":"At the corner of kethchen shelf",
+                    "format":"jpg"
+                },
+                {   "date":"2016-06-29",
                     "title":"Livelihood",
                     "format":"jpg",
                     "description":"Huizhou,Anhui Province,China"
-
                 },
                 {
                     "date":"2018-06-10",
