--- a/src/content/config.json
+++ b/src/content/config.json
@@ -165,6 +165,19 @@
                     "description":"New York"
 
                 },
+                {   "date": "2018-12-25",
+                    "title": "Pathway to temptation",
+                    "format": "jpg"
+                },
+                {
+                    "date":"2017-11-24",
+                    "title":"Story in glass",
+                    "format":"jpg"
+                },
+                {
+                    "date":"2017-08-08",
+                    "title":"The quietness before dawn"
+                },
                 {
                     "date":"2018-09-03",
                     "title":"From afar",
@@ -175,16 +188,8 @@
                     "title": "Gaze into darkness",
                     "format": "jpg"
                 },
-                {
-                    "date":"2017-08-08",
-                    "title":"The quietness before dawn"
-                },
-                {   "date": "2019-04-17",
-                    "title": "A cup of joy",
-                    "format": "jpg"
-                },
-                {   "date": "2019-04-16",
-                    "title": "Night fantasy-red",
+                {   "date": "2018-09-02",
+                    "title": "To knowhere",
                     "format": "jpg"
                 },
                 {   "date": "2019-03-17",
@@ -196,36 +201,31 @@
                     "format": "jpg"
                 },
                 {
-                    "date":"2018-09-04",
-                    "title":"All an illusion",
-                    "format":"jpg"
-                },
-                {   "date": "2018-09-02",
-                    "title": "To knowhere",
-                    "format": "jpg"
-                },
-                {   "date": "2018-12-25",
-                    "title": "Pathway to temptation",
-                    "format": "jpg"
-                },
-                {
-                    "date":"2017-11-24",
-                    "title":"Story in glass",
-                    "format":"jpg"
-                },
-                {
                     "date":"2017-06-11",
                     "title":"Circle movement",
                     "format":"jpg"
                 },
+                {
+                    "date":"2018-09-04",
+                    "title":"All an illusion",
+                    "format":"jpg"
+                },
+                {   "date": "2019-04-17",
+                    "title": "A cup of joy",
+                    "format": "jpg"
+                },
+                {
+                    "date": "2019-04-20",
+                    "title": "Night fantasy-yellow",
+                    "description": "jpg"
+                },
+                {   "date": "2019-04-16",
+                    "title": "Night fantasy-red",
+                    "format": "jpg"
+                },
                 {   "date":"2019-04-16",
                     "title":"At the corner of kethchen shelf",
                     "format":"jpg"
-                },
-                {   "date":"2016-06-29",
-                    "title":"Livelihood",
-                    "format":"jpg",
-                    "description":"Huizhou,Anhui Province,China"
                 },
                 {
                     "date":"2018-06-10",
@@ -234,9 +234,18 @@
                     "description":"Cape Cod,MA"
                 },
                 {
+                    "date":"2018-09-01",
+                    "title":"Parking",
+                    "description":"Yellowknife,Canada"
+                },
+                {
                    "date":"2018-09-03",
                    "title":"Mirror of the sky",
                    "format":"jpg"
+                },
+                {
+                    "date":"2018-09-01",
+                    "title":"Yellowknife Canada"
                 },
                 {
                     "date":"2016-12-23",
@@ -245,32 +254,27 @@
                     "description":"Huangshan,China"
                 },
                 {
-                    "date":"2017-02-21",
-                    "title":"Sunset",
-                    "format":"jpg",
-                    "description":"Keywest,FL"
-                },
-                {
                     "date":"2017-02-20",
                     "title":"Sunset",
                     "format":"jpg",
                     "description":"Keywest,FL"
                 },
                 {
-                    "date":"2016-04-18",
-                    "title":"Light of the city",
+                    "date":"2017-02-21",
+                    "title":"Sunset",
                     "format":"jpg",
-                    "description":"New York"
+                    "description":"Keywest,FL"
                 },
                 {
-                    "date":"2018-09-01",
-                    "title":"Yellowknife Canada"
+                    "date":"2017-02-22",
+                    "title":"Sunset",
+                    "format":"jpg",
+                    "description":"Keywest,FL"
                 },
                 {
-                    "date":"2014-11-07",
-                    "title":"The runner",
-                    "format":"jpg",
-                    "description":"Jiuzaigou,Sichuan Province,China"
+                    "date":"2018-07-21",
+                    "title":"Summer time",
+                    "description":"Japan"
                 },
                 {
                     "date":"2015-08-08",
@@ -288,14 +292,31 @@
                     "description":"Salem,MA"
                 },
                 {
+                    "date":"2014-11-07",
+                    "title":"The runner",
+                    "format":"jpg",
+                    "description":"Jiuzaigou,Sichuan Province,China"
+                },
+                {
                     "date":"2018-07-14",
                     "title":"Language of water",
                     "description":"Yunnan Province,China"
                 },
                 {
-                    "date":"2018-09-01",
-                    "title":"Parking",
-                    "description":"Yellowknife,Canada"
+                    "date":"2015-10-10",
+                    "title":"The dancer in the city",
+                    "format": "jpg"
+                },
+                {
+                    "date":"2016-04-18",
+                    "title":"Light of the city",
+                    "format":"jpg",
+                    "description":"New York"
+                },
+                {   "date":"2016-06-29",
+                    "title":"Livelihood",
+                    "format":"jpg",
+                    "description":"Huizhou,Anhui Province,China"
                 },
                 {
                     "date":"2016-06-28",
