--- a/src/content/config.json
+++ b/src/content/config.json
@@ -287,6 +287,11 @@
                     "description":"Japan"
                 },
                 {
+                    "date":"2018-07-21",
+                    "title":"Morning",
+                    "description":"Yunnan Province, China"
+                },
+                {
                     "date":"2016-06-05",
                     "title":"The meaning of existence",
                     "description":"Salem,MA"
