--- a/src/content/config.json
+++ b/src/content/config.json
@@ -255,19 +255,19 @@
                 },
                 {
                     "date":"2017-02-20",
-                    "title":"Sunset",
+                    "title":"Sunset1",
                     "format":"jpg",
                     "description":"Keywest,FL"
                 },
                 {
-                    "date":"2017-02-21",
-                    "title":"Sunset",
+                    "date":"2017-02-20",
+                    "title":"Sunset2",
                     "format":"jpg",
                     "description":"Keywest,FL"
                 },
                 {
-                    "date":"2017-02-22",
-                    "title":"Sunset",
+                    "date":"2017-02-20",
+                    "title":"Sunset3",
                     "format":"jpg",
                     "description":"Keywest,FL"
                 },
