--- a/src/content/config.json
+++ b/src/content/config.json
@@ -145,6 +145,10 @@
                 {
                     "date": "2018-12-31",
                     "title": "Reflections on industrialization"
+                },
+                {
+                    "date": "2019-12-20",
+                    "title": "printing"
                 }
             ]
         },
